--- a/templates/package.json
+++ b/templates/package.json
@@ -15,6 +15,7 @@
     "cypress-file-upload": "^5.0.8",
     "cypress-testrail": "^2.9.0",
     "cypress-testrail-reporter": "^1.3.4",
-    "cypress-xpath": "^2.0.1"
+    "cypress-xpath": "^2.0.1",
+    "cypress-mochawesome-reporter": "^3.8.2"
   }
 }
