--- a/templates/package.json
+++ b/templates/package.json
@@ -17,6 +17,7 @@
     "cypress-testrail-reporter": "^1.3.4",
     "cypress-xpath": "^2.0.1",
     "cypress-mochawesome-reporter": "^3.8.2",
-    "cy-verify-downloads": "^0.2.3"
+    "cy-verify-downloads": "^0.2.3",
+    "cypress-wait-until": "^3.0.1"
   }
 }
