--- a/templates/package.json
+++ b/templates/package.json
@@ -18,6 +18,7 @@
     "cypress-xpath": "^2.0.1",
     "cypress-mochawesome-reporter": "^3.8.2",
     "cy-verify-downloads": "^0.2.3",
-    "cypress-wait-until": "^3.0.1"
+    "cypress-wait-until": "^3.0.1",
+    "cy-mobile-commands": "^0.3.0"
   }
 }
