--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "cy-mobile-commands": "^0.3.0",
     "cy-verify-downloads": "^0.2.3",
+    "cypress-if": "^1.12.0",
     "cypress-mochawesome-reporter": "^3.8.2",
     "cypress-wait-until": "^3.0.1",
     "cypress-xpath": "^2.0.1",
