--- a/templates/package.json
+++ b/templates/package.json
@@ -16,6 +16,7 @@
     "cypress-testrail": "^2.9.0",
     "cypress-testrail-reporter": "^1.3.4",
     "cypress-xpath": "^2.0.1",
+    "cypress-if": "^1.12.0",
     "cypress-mochawesome-reporter": "^3.8.2",
     "cy-verify-downloads": "^0.2.3",
     "cypress-wait-until": "^3.0.1",
